[package]
name = "gtfs-static"
version = "0.1.0"
authors = ["Ibiyemi Abiodun <ibiyemi@intulon.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
zip = { version = "2.2.2", default-features = false, features = ["deflate"] }
csv = "1.3.1"
js-sys = "0.3.77"
anyhow = "1.0.95"
itertools = "0.14.0"
web-sys = { version = "0.3.77", features = ["console"] }
serde = { version = "1.0.217", features = ["derive"] }

[dependencies.getrandom]
version = "*"
features = ["js"]

[dependencies.miniz_oxide]
version = "*"
features = ["simd"]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = 3
# strip = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
demangle-name-section = true
# dwarf-debug-info = true
